fix dark mode color

--- a/src/app/App.css
+++ b/src/app/App.css
@@ -34,7 +34,7 @@
   --primary-background-color: #18191a;
   --secondary-background-color: #242526;
   --title-color: #fff;
-  --text-color: #aaa;
+  --text-color: #ddd;
   --divider-color: rgba(255, 255, 255, .3)
 }
 
