--- a/src/views/components/Footer/footer.module.css
+++ b/src/views/components/Footer/footer.module.css
@@ -1,7 +1,7 @@
 .dash-border {
   margin-top: 2rem;
   border-width: 1px 0 0 0;
-  border-color: rgba(0, 0, 0, .5);
+  border-color: var(--divider-color);
   border-style: dashed;
 }
 
@@ -49,7 +49,7 @@
 .copyright {
   text-align: center;
   font-size: 1.5rem;
-  border: 1px solid rgba(0, 0, 0, .2);
+  border: 1px solid var(--divider-color);
   border-width: 1px 0 0 0;
   padding: 1rem 0;
 }
